homework5/manifest_app/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
  labels:
    app: user-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api
          image: alyanovao/user-api:1.0.3-snapshot
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
