homework5/manifest_app/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-api
  labels:
    app: user-api
spec:
  type: ClusterIP
  selector:
    app: user-api
  ports:
    - port: 8080
      name: web
      protocol: TCP
      targetPort: 8080
