homework5/manifest_app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-api
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-api
                port:
                  number: 8080
          - path: /actuator/prometheus
            pathType: Prefix
            backend:
              service:
                name: user-api
                port:
                  number: 8080
